Changelog:

3.14.0 20190124
Platform: Added Hyperjaxb3 nameing with full qualified entity name
Generator: Added Jaxb2Marshaller config generator

3.13.0 20190117
Core: Added reporting module

3.12.2 201
Some tiny bugfixes, cosmetics and documentation

3.12.1 20181205
Core: ThreadPoolSupport shutdown
Flow Generator: Fixed NullPointerException at null response

3.12.0 20181031
JAXB: Dropped unnecessary @XmlSeeAlso annotations with plugin xjc-drop-xmlseealso
Core: Using xmlbeans SchemaDocument.Factory.parse instead of XMLObject.Factory.parse
Some tiny bugfixes and documentation

3.11.0 20180914
Sample: Added analysis module in domain
Sample: Added generic report definition
Core: Upgrade to XmlBeans version 3.0.1
Core: Reading of XSD files changed using java.nio
Core: Persistence - DDLGenerator fixed
Core: SFTP - Fixed ambigous file handling
Some tiny bugfixes and documentation

3.10.0 20180912
DomainDoc added annotation.appInfo and SimpleTypes

3.9.0 20180523
Templates upgraded to Pivotal TcServer version 4.0.1
Supports now java 10
Supports now maven 3.5.0
Persistence: DDLGenerator fixed
Added Complex- and ElementType to XsdContainer
Added eip-core-jaxb
Flow: DirectMapper impl provides default values
Flow: Log level of file creation set to trace
Core: Persistence - scaled BigDecimal with RoundingMode
Some tiny bugfixes and documentation

3.8.6 20170613
Flow Generator: Handling Default values
Impl POI: Minor enhancements
Generators: Added mvc dispatch servlet to web.xml

3.8.5 20170414
Impl: Added POI Excel util

3.8.4 20170324
Core: Added ReportingThreadPoolProvider test and changed initialization modifiers

3.8.3 20170323
Generators: XJC plugin to add element defaults with argument name eip-xsd-default-value
Sample: Use new XJC plugin with argument eip-xsd-default-value

3.8.2 20170120
Generators: Marshaller and Unmarshaller based on packages
Impl: Marshaller and Unmarshaller based on packages

3.8.1 20170111
Impl: Fixed sync LockableOperation releasing lock to early